# backend/api/query.py
@@ -1,10 +1,13 @@
-RESULT_SIZE = 500
+from elasticsearch_dsl import Search
+
+RESULT_SIZE = 200
 
 def get_field_distinct():
     query = {
         "unique_platforms": {
             "terms": {
-                "field": "platforms"
+                "field": "platforms",
+                "size": RESULT_SIZE
             }
         },
         "unique_genres": {
@@ -37,9 +40,10 @@ def get_field_distinct():
 def test_Query():
     query = {
         "match":{
-            "Name": "Tomb Raider"
+            "name": "Tomb Raider"
         }
     }
+    return query
 #------------------------------
 # LEAF -> exists, fuzzy, ids, range, term, terms -> https://www.elastic.co/guide/en/elasticsearch/reference/current/term-level-queries.html
 # Search Engine -> interval, match, multi_match, combined_fields -> https://www.elastic.co/guide/en/elasticsearch/reference/current/full-text-queries.html
@@ -54,13 +58,13 @@ def test_Query():
 # Geht is not None?
 # Limit 10.000 Elemente, danch sollte search_after verwendet werden.
 # Quelle: https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html
-def query_paginate(pag_from, result_size):
-  query_string = ""
-  if pag_from is not None:
-    query_string.join(f'"from": {pag_from},\n')
-  if result_size is not None:
-    query_string.join(f'"size":{result_size},\n') 
-  return query_string
+# def query_paginate(pag_from, result_size):
+#   query_string = ""
+#   if pag_from is not None:
+#     query_string.join(f'"from": {pag_from},\n')
+#   if result_size is not None:
+#     query_string.join(f'"size":{result_size},\n') 
+#   return query_string
 
 
 # Position 2
@@ -69,21 +73,29 @@ def query_paginate(pag_from, result_size):
 # Erweiterbar: - Komplexere Sortierungen wie bspw. {"price" : {"order" : "asc", "mode" : "avg"}}
 # mode -> min, max, sum, avg, median
 # Quelle: https://www.elastic.co/guide/en/elasticsearch/reference/current/sort-search-results.html
-def query_sort(sort_order, field):
-  query_string = f'"sort" : ['
-  query_string.join(f'{"{field}": "{sort_order}"}')
-  query_string.join(f'],')
-  return query_string
+# def query_sort(sort_order, field):
+#   query_string = f'"sort" : ['
+#   query_string.join(f'{"{field}": "{sort_order}"}')
+#   query_string.join(f'],')
+#   return query_string
     
-def build_Query(args):
-
-    # query = {
-    #     "match":{
-    #         "Name": "Counter"
-    #     }
-    # }
- 
+def build_Query(es_client,index, args):
+    query = Search(using=es_client, index=index) 
+    name = args.get('name')
+    # developer = args.get('developer')
+    
+    # if developer is not None:
+    #   query = query.filter('terms', developer=[developer])
+      
+    if name is not None:
+      query = query.query('match', name=name)
     return query
+  
+def build_paginate_Query(es_client,index, args):
+    query = Search(using=es_client, index=index) \
+      .filter()
+    return query
+  
 
 # Fuzzy Search for specific term
 # GET /vgsales/_search
