# backend/main.py
@@ -1,9 +1,11 @@
 import sys
-from api.query import build_Query, test_Query, get_field_distinct
+from api.query import build_Query, test_Query, get_field_distinct, build_paginate_Query
 from flask import Flask, request
 from elasticsearch import Elasticsearch
 from flask_swagger_ui import get_swaggerui_blueprint
 from flask_cors import CORS
+from elasticsearch_dsl import Search
+import json
 
 es_client = Elasticsearch(["http://node-1.hska.io:9200/","http://node-2.hska.io:9200"])
 app = Flask(__name__)
@@ -44,11 +46,38 @@ def getTestRequest():
     
 @app.route('/api/search', methods=['GET'])
 def getSearchRequest():
-    generated_query = build_Query(request.args)
-    result = es_client.search(index=INDEX,query=generated_query)
-    return result
+    print(request.args)
+    size = request.args.get("size")
+    if size is None:
+        size = 15
+    else:
+        size = int(size)
+        
+    start = request.args.get("from")
+    if start is None:
+        start = 0
+    else:
+        start = int(start)
+        
+    generated_query = build_Query(es_client, INDEX, request.args)
+    generated_query = generated_query[start:size]
+    es_response = generated_query.execute()
+    return es_response.to_dict()
+
+@app.route('/api/suggestor', methods=['GET'])
+def getSuggestRequest():
+    print(request.args)
+    return "TODO"
 
 if __name__ == "__main__":
     app.run()
 
  
+# developer = request.args.get("developer")
+    # name = request.args.get("name")
+    # platforms = request.args.get("platforms")
+    # genres = request.args.get("genres")
+    # publisher = request.args.get("publisher")
+    # categories = request.args.get("categories")
+    # print(f"Received: developer: {developer}, /n name: {name}, /n platforms: {platforms},/n genres: {genres},/n publisher: {publisher},/n categories: {categories}")
+    
